[package]
name = "axum_thiserror_tracing"
description = "Helpful IntoResponse derive macro for the thiserror crate"
version = "0.1.0"
authors = ["ozpv https://ozpv.dev"]
license = "MIT"
repository = "https://github.com/ozpv/axum_thiserror_tracing/"
keywords = ["axum", "thiserror", "intoresponse", "derive"]
exclude = ["example/"]
publish = ["axum_thiserror_tracing"]
readme = "README.md"
categories = ["web-programming::http-server"]
edition = "2021"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"

[features]
serde = []
tracing = []
