[package]
name = "axum_thiserror_intoresponse_derive_example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum_thiserror_intoresponse_derive = { path = "..", features = ["serde", "tracing"] }
serde = "1.0.217"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
